# bcs

./: .clang-format  .gitignore  CMakeLists.txt  README.TXT  README.md
LWIP/: CMakeLists.txt
SmartNIC_SW/: buildall  eka_driver_release_notes.txt
api/: EkaBcs.h
apisrc/: CMakeLists.txt  Efc.c  EfcCme.c  EfcItchFS.c  EfcItchFS.cpp  EfcQED.c  EfcTestsCallbacks.h  Efh.c  EfhFastBuffer.h  EfhTestFuncs.c  EfhTestFuncs.h  EfhTestTypes.h  Eka.c  EkaCmeFcStrategy.c  EkaCmeFcStrategy.h  EkaCore.c  EkaCore.h  EkaCsumSSE.h  EkaCtxs.h  EkaDev.c  EkaDev.h  EkaDmaChannel.h  EkaEfc.c  EkaEfc.h  EkaEfcDataStructs.h  EkaEpm.c  EkaEpm.h  EkaEpmAction.c  EkaEpmAction.h  EkaEpmRegion.h  EkaEurStrategy.h  EkaFh.c  EkaFh.h  EkaFhBats.c  EkaFhBats.cpp  EkaFhBats.h  EkaFhBatsGr.c  EkaFhBatsGr.h  EkaFhBatsParser.c  EkaFhBatsParser.h  (+258 more)
apisrc/Ehp/: EhpBcCmeFc.c  EhpCmeFC.c  EhpCmeFC.h  EhpConf.h  EhpEur.c  EhpEur.cpp  EhpEur.h  EhpItchFS.c  EhpItchFS.h  EhpNews.c  EhpNews.h  EhpNom.c  EhpNom.h  EhpPitch.c  EhpPitch.h  EhpProtocol.c  EhpProtocol.h  EhpQED.c  EhpQED.h
apisrc/FhBook/: EkaFhBook.c  EkaFhBook.h  EkaFhCmeBook.h  EkaFhCmeBookSide.h  EkaFhCmeSecurity.h  EkaFhFbSecurity.h  EkaFhFullBook.c  EkaFhFullBook.h  EkaFhOrder.h  EkaFhPlevel.h  EkaFhSecurity.h  EkaFhSecurityState.h  EkaFhTobBook.h  EkaFhTobSecurity.h  EkaFhXdpSecurity.h
apisrc/arch/: sys_arch.h
apisrc/compat/: Efc.h  EfcCme.h  EfcCtxs.h  EfcItchFS.h  EfcMsgs.h  EfcMultiStrategies.h  EfcQED.h  Efh.h  EfhMsgs.h  Eka.h  EkaCtxsExt.inl  EkaMacro.h  EkaMsgs.h  Epm.h  Exc.h  libekaline2.map
apisrc/old_headers/: efh.h  efh_message.h  eka_fire_report.h  exc_socket.h  exc_socket_def.h  p4_data.h  p4_exc_data.h  p4_memory_addresses.h  phase4.h  subscriptions.h
apisrc/prev_compat/: Efc.h  EfcCtxs.h  EfcMsgs.h  Efh.h  EfhMsgs.h  Eka.h  EkaMacro.h  EkaMsgs.h  Exc.h
bc_include/: EkaBc.h  libekaline2.map
bc_lib/: Makefile  libekaline2.map
bc_src/: EkaBcCmeStrategy.c  EkaBcCmeStrategy.h  EkaBcEurProd.c  EkaBcEurProd.cpp  EkaBcEurProd.h  EkaBcFireReport.c  EkaBcFireReport.cpp  EkaBcStrategy.c  EkaBcStrategy.cpp  EkaBcStrategy.h  EkaEurStrategy.c  EkaEurStrategy.h  EkaExch.c  EkaExch.h  EkaHashEng.h  EkaHashEngLine.h  EkaParser.h  EkaRunLoop.c  ekaBc.c
bc_tests/: efcBCCmeFireTestNew.c  efcBCCmeFireTestNew.cpp
cereal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cerealConfigVersion.cmake  cmake_install.cmake
cmake/: ccache.cmake  ccache.conf  preventinsource.cmake  projectsettings.cmake  x64_fed29_gcc11_default-toolchain.cmake
eka_utils/: Makefile  decodeDefinitionsFile.c  efc_debug_params.c  efc_debug_params.cpp__  efc_dump_params.c  efc_dump_params.cpp  efc_state.c  efc_state.cpp  efh_dump_igmp_acl.c  efh_dump_igmp_acl.cpp  efh_state.c  eka_BoxPcapGap.c  eka_Mold64PcapGap.c  eka_Mold64PcapGap.cpp  eka_ctxbyhash.c  eka_driver_debug_prints.c  eka_dump.c.back  eka_echo_server.c  eka_echo_server.cpp  eka_epmactiondump.c  eka_epmdump.c  eka_epmdump.cpp  eka_kill_fpga.c  eka_mc_state.c  eka_new_echo_server.c  eka_new_echo_server.cpp  eka_noecho_server.cpp  eka_nomPcapGap.c  eka_nomPcapGap.cpp  eka_parse_gem_pcap.c  eka_parse_nom_pcap.c  eka_parse_nom_pcap.c.back  eka_pcap2sim.c  eka_port_mirror.c  eka_port_mirror.cpp  eka_set.c.back  eka_tcpdump.c  eka_tcpdump.cpp  eka_timestamp2string.c  eka_timestamp2string.c.back  (+14 more)
googletest/: EkaMoexNetworkConfig.h  EkaMoexTestFuncs.cpp  EkaMoexTestStructs.h  TestCaseConfig.h  TestCmeFc.cpp  TestCmeFc.h  TestEfcFixture.cpp  TestEfcFixture.h  TestEur.cpp  TestEur.h  TestIgmpFixture.cpp  TestIgmpFixture.h  TestMoex.cpp  TestMoex.h  TestMoexBasic.cpp  TestP4.cpp  TestP4.h  TestP4FixedSecs.cpp  TestP4FixedSecs.h  TestP4PredefinedCtx.cpp  TestP4PredefinedCtx.h  TestP4Rand.cpp  TestP4Rand.h  TestTcpCtx.h  TestUdpCtx.h  ekaGoogleTest.cpp
lwip/: lwip
misc/: a2i.c
new_api_tests/: C1_20210409_subscr.inc  C1_secIds.list  EfhBatsProps.h  EfhBoxProps.h  EfhBxProps.h  EfhCmeProps.h  EfhIseProps.h  EfhMiaxProps.h  EfhMrx2TopProps.h  EfhNomProps.h  EfhPhlxOrdProps.h  EfhPhlxTopoProps.h  EfhPlrProps.h  EfhXdpProps.h  boxHash.c  cme_quotes.pcap  efcBCCmeFireTestNew.c  efcCboeHuynhTest.c  efcCboeMd.c  efcCboeReconnectTest.c  efcCboeTest.c  efcCboeTestNew.c  efcCmeFireTest.c  efcCmeFireTestNew.c  efcCmeFullTest.c  efcCmeGts.c  efcCmeHuynhQuotes.c  efcCmeSwOnlyTest.c  efcCmeSwQuotes.c  efcCmeTest.c  efcCtxWrTest.c  efcFastSweepFireTest.c  efcFastSweepFireTestNew.c  efcNewsFireTest.c  efcQedFireTestNew.c  efcTest.c  efcWatchDogTest.c  efc_lab_test.c  efhBoxPcapGap.c  efhBoxPcapTest.c  (+92 more)
pcapParsers/: EkaPcapNomGr.h  Makefile  batsPcapParse.c  batsPcapParse.cpp  bcsPcapParse.cpp  boxPcapParse.c  boxPcapParse.cpp  bxPcapParse.c  cmePcapParse.c  cmePcapParse.cpp  cmePcapParse.h  gemPcapParse.cpp  mrxPcapParse.c  mrxPcapParse.cpp  nomPcapParse.c  nomTcpPcapParse.c  plrPcapParse.c  tomPcapParse.cpp  topoPcapParse.c  xdpPcapParse.c
rpm_scripts/: build_ekaline2_rpm.sh  ekaline2.gts.spec  gts_build_ekaline2_rpm.sh  make_local_release.sh  tar_libeka.sh
scripts/: make_release.sh
src/: Efc.cpp  Efh.cpp  EfhTestFuncs.cpp  EfhTestTypes.h  EkaBcCmeStrategy.cpp  EkaBcCmeStrategy.h  EkaBcEurProd.cpp  EkaBcEurProd.h  EkaBcFireReport.cpp  EkaBcStrategy.cpp  EkaBcsMoexProd.cpp  EkaBcsMoexProd.h  EkaCmeFcStrategy.cpp  EkaDev.cpp  EkaDev.h  EkaEfc.cpp  EkaEfc.h  EkaEpm.cpp  EkaEpm.h  EkaEpmAction.cpp  EkaEpmRegion.h  EkaEurProd.h  EkaEurStrategy.cpp  EkaEurStrategy.h  EkaExch.h  EkaFh.h  EkaFhBatsGr.h  EkaFhBcsSbeParser.h  EkaFhBoxGr.h  EkaFhBoxParser.cpp  EkaFhBoxParser.h  EkaFhBxParser.cpp  EkaFhCme.h  EkaFhCmeGr.h  EkaFhCmeParser.cpp  EkaFhCmeParser.h  EkaFhGem.cpp  EkaFhGem.h  EkaFhGemGr.h  EkaFhGemParser.cpp  (+83 more)
test/: Action.h  Makefile  Strategy.h  StrategyManager.h  Trigger.h  common.h  test_epm_local.cpp
tests/: EfcMasterTestConfig.h  EfcP4CboeTestCtx.h  EfcStratTestCtx.h  EfhBatsProps.h  EfhBoxProps.h  EfhGemProps.h  EfhNomProps.h  EfhPlrProps.h  EfhProperties.h  EkaFhBcsSbeDecoder.h  Makefile  bcsMdFPGATest.cpp  bcsMdTest.cpp  bcsTcpConnect.cpp  draft_test.c  efcMasterTest.c  efhMultiTest.c  ekaBcTest.c  tcpTxBurst.c  (+2 more)
(+268 files in other folders)
